@@ -25,7 +25,7 @@ Header files and libraries for developing applications for libbde.
 Summary: Several tools for accessing BitLocker encrypted volumes
 Group: Applications/System
 Requires: libbde = %{version}-%{release} @ax_libcsystem_spec_requires@ @ax_libfuse_spec_requires@
-@libbde_spec_tools_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libfuse_spec_build_requires@
+@libbde_spec_tools_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libfuse_spec_build_requires@
 
 %description tools
 Several tools for accessing the BitLocker encrypted volumes
@@ -55,7 +55,7 @@ rm -rf ${RPM_BUILD_ROOT}
 
 %files devel
 %defattr(644,root,root,755)
-%doc AUTHORS COPYING NEWS README README.macosx README.dll README.mingw README.static ChangeLog
+%doc AUTHORS COPYING NEWS README README.dll README.macosx README.mingw README.static ChangeLog
 %{_libdir}/*.a
 %{_libdir}/*.la
 %{_libdir}/*.so
